# Illumination-Theory

./: .gitignore  README.md  render.sh  run.ps1  run.sh
renderer/src/: color.rs  hittable.rs  hittable_list.rs  main.rs  ray.rs  sphere.rs  vec3.rs
shaders/: shaders.wgsl
tracer/: Cargo.toml
tracer/src/: aabb.rs  buffer.rs  bvh.rs  camera.rs  color.rs  geometry.rs  hittable.rs  hittable_group.rs  hittable_list.rs  interval.rs  main.rs  material.rs  optics.rs  perlin.rs  ray.rs  render.rs  rtweekend.rs  scenes.rs  sphere.rs  texture.rs  utils.rs  vec3.rs  world.rs
tracer/src/geometry/: boxx.rs  constant_medium.rs  hittable.rs  mod.rs  quad.rs  ray.rs  rotate.rs  sphere.rs  sphereflake.rs  translate.rs
tracer/src/graphics/: aabb.rs  bvh.rs  camera.rs  light.rs  material.rs  mod.rs  perlin.rs  texture.rs
tracer/src/math/: consts.rs  interval.rs  mod.rs  utils.rs  vec3.rs
tracer/src/rendering/: buffer.rs  color.rs  gpu_render.rs  mod.rs  render.rs
