[package]
name = "tracer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytemuck = {version = "1.16.0", features = ["derive"]}
image = "0.24.7"
indicatif = "0.17.5"
pollster = {version = "0.3.0", features = ["macro"]}
rand = "0.8.5"
wgpu = "0.20.0"
winit = "0.29.10"
